force-app/main/default/objects/Update_Customer_Notification__c/Update_Customer_Notification__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Update Customer Notification</label>
</CustomObject>