force-app/main/default/objects/Update_Customer_Notification__c/fields/Frequency_of_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_Reminder__c</fullName>
    <label>Frequency of Reminder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>