force-app/main/default/objects/Update_Customer_Notification__c/fields/Task_Notification__c.field-meta.xml
<CustomField>
    <fullName>Task_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task Notification</label>
    <type>Checkbox</type>
</CustomField>